fix(companyapproval): Fix layout issues

--- a/src/sass/pages/admin-pages/_approve.scss
+++ b/src/sass/pages/admin-pages/_approve.scss
@@ -68,7 +68,6 @@
   &__reject {
     background-color: transparent;
     color: $orange-color;
-    border: none;
     padding: 10px 20px;
     border-radius: 5px;
     border: 1px solid $orange-color;
